# finder_v2

ros/: onboard.launch
src/: mechanics.launch  onboard.launch
src/brazo/: .pydevproject  CMakeLists.txt  package.xml
src/brazo/msg/: Arm.msg
src/brazo/scripts/: gui_simple.glade  gui_simple.py  joy.py  shell.py
src/finderv2/: CMakeLists.txt  package.xml
src/finderv2/launch/: mechanics.launch  mechanics_back.launch  mechanics_local.launch
src/finderv2/msg/: FourArmsInt16.msg  TwoWheelInt16.msg
src/finderv2/scripts/: arms_gui.glade  arms_gui.py  arms_shell.py  diff_joy.py  diff_odometry.py  diff_twist_to_motors.py  diff_virtual_joy.py  finderv2_testing_interface.glade  finderv2_testing_interface.py  finderv2_testing_interface_2.py  interface_arm.py  interface_diff.py  interface_litarms.py
src/rosserial/rosserial_python/src/rosserial_python/: SerialClient.py
src/rrhh/: CMakeLists.txt  package.xml
src/rrhh/launch/: joy.launch  serial_manual.launch  serial_test.launch  serial_test_remote.launch  test1.launch  test2.launch  test3.launch
src/rrhh/msg/: RRHH.msg
src/rrhh/scripts/: joy.py  joy_rand.py  rand.py  tf.py
src/rrhh/uc_src/: drive.cpp
src/video/: CMakeLists.txt  package.xml
src/video/launch/: camaras.launch  camaras3.launch  conversorCV.launch  finder_cam.launch  finder_cam_local.launch  visor_camaras (2).launch  visor_camaras.launch
src/video/src/: conversor_cv.cpp  data_imu.cpp  detector_humanos.cpp  tf_broadcaster.cpp
uc_code/control_arms_finderv2/: control_arms_finderv2.cpp
uc_code/control_arms_finverv2_test/: control_arms_finderv2_test.cpp
uc_code/control_brazo/: control_brazo.cpp
uc_code/control_brazo_test/: control_brazo_test.cpp
uc_code/control_diff_finderv2/: control_diff_finderv2.cpp
uc_code/control_diff_finderv2_test/: control_diff_finderv2_test.cpp
uc_code/control_finderv1/: control_finderv1.cpp
uc_code/control_rrhh/: control_rrhh.cpp
uc_code/libraries/libs/: AS5043.cpp  Encoder.cpp  Encoder.h  OSMC.cpp  OSMC.h  SaberSerial.cpp  SaberSerial.h  SimpleDriver.cpp  SimpleDriver.h  SimpleDynamixel.cpp  SimpleDynamixel.h  SimpleOpen.cpp  SimpleOpen.h  SimplePID.cpp  SimplePID.h  SimpleSaber.cpp  SimpleSaber.h  SimpleServo.cpp  SimpleServo.h  Talon.cpp  Talon.h
uc_code/libraries/ros_lib/: ros.h
uc_code/libraries/ros_lib/arm_interface/: Arm.h
uc_code/libraries/ros_lib/finder/: FourArmsInt16.h  TwoWheelInt16.h
uc_code/libraries/ros_lib/rrhh/: RRHH.h
