<?xml version="1.0"?>
<package>
  <name>arm_interface</name>
  <version>0.0.1</version>
  <description>The arm_interface package, scripts for interfaces, no inverses yet</description>
  <maintainer email="manuel@todo.todo">manuel</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>joy</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>joy</run_depend>
</package>
